gke/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ssl-test
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
      - hosts:
          - flafla.calcgen.com
        secretName: sslcerts
  rules:
  - host: flafla.calcgen.com 
    http:
      paths:
      - path: /pipe
        backend:
          serviceName: pipingdb-backend-service
          servicePort: 80
      - path: /pipef
        backend:   
          serviceName: pipingdb-frontend
          servicePort: 80
      - path: /
        backend: 
          serviceName: calcgen-website-service
          servicePort: 80
